toy_tribe/static/css/style.css
/* ... */
.review-toy-buttons-div{
    display: flex;
    justify-content: space-evenly;
    margin-top: 25px;
}

.review-toy-buttons {
    background-color: #f5f5f5;
    color: #333A3F;
}

.review-toy-buttons:hover, .review-toy-buttons:focus {
    background-color: #D02847;
    color: #FFF3D3;
    font-size: 1.1rem;
}

/* ---------- add_review.html ---------- */
/* Add review title */
#add-review-title {
    display: flex;
    justify-content: center;
}

#add-review-title img {
    height:50px;
}

#add-review-title span {
    color: #333A3F;
    padding-left: 15px;
}

/* Add review form */
#add-review-form {
    max-width: min(600px, 85%);
    margin: 0 auto; 
}

#add-review-form label {
    color: #333A3F;
    font-size: 1rem;
}

.add-review-input {
    margin-top: 20px;
}

.add-review-input textarea {
    background-color: #FFF3D3;
    height: 200px;
}

.submit-failure {
    font-size: 0.8rem;
    font-weight: bolder;
    color: #D02847;
    margin-bottom: 10px;
}

#add-review-button {
    font-size: 1.5rem;
    background-color: #D02847;
    color: #FFF3D3;
    cursor: pointer;
    margin-bottom: 50px;    
}

/* ---------- edit_review.html ---------- */
/* Edit review title */
#edit-review-title {
    text-align: center;
    margin: 10px;
}
#edit-review-title img {
    height: 50px;
    margin-top: 10px;
}

/* Edit review form */
#edit-review-form {
    max-width: min(600px, 85%);
    margin: 0 auto; 
}

#edit-review-form label {
    color: #333A3F;
    font-size: 1rem;
}

.edit-review-input {
    margin-top: 20px;
}

.edit-review-input textarea {
    background-color: #FFF3D3;
    height: 200px;
}

#edit-review-button {
    font-size: 1.5rem;
    background-color: #D02847;
    color: #FFF3D3;
    cursor: pointer;
    margin-bottom: 50px;    
}

/* ---------- Delete confirmations ---------- */
/* Modal message title */
.confirm-message {
    text-align: center;
    font-size: 2.5rem;
    font-weight: bold;
    color: #D02847;
}

.modal-text {
    text-align: center;
    font-size: 1.5rem;
    color: #333A3F;
}

/* Modal buttons */
.confirm-delete-yes,
.confirm-delete-no {
    text-align: center;
    width: 100%;
    height: 100%;
    border: 1px solid black;
    position: absolute;
    border-radius: 10px;
    color: #FFF3D3;
    background-color: #D02847;
    font-weight: bold;
    padding-top: 5px !important;
}

.confirm-delete-yes:hover, .confirm-delete-yes:focus {
    font-size: 1.4rem;
    background-color: #333A3F;
    color: #f5f5f5;
}

.confirm-delete-no:hover, .confirm-delete-no:focus {
    font-size: 1.4rem;
    background-color: #f5f5f5;
    color: #333A3F;
}

/* Modal styling */
.delete-modal {
    background-color: #FFF3D3;
    border: 1px solid #D02847;
    box-shadow: 5px 5px #D02847;
}

.modal-footer {
    background-color: #FFF3D3 !important;
    border-top: 1px solid #F6D36A;
}

.confirm-delete-button-container {
    display: flex;
    justify-content: center;
    height: 100%;
    width: 100%;
    position: relative;
    padding: 0;
}

.modal-overlay {
    background-color: #FFF3D3;
    opacity: 0.7 !important;
}

/* ---------- Search and sort ---------- */
/* Search row in toys */
.search-row {
    width: 95%;
}

/* Toys search bar */
.toys-search {
    margin-top: 20px !important;
}

.toy-search-text {
    display: inline !important;
    width: 70% !important;
    max-width: 500px !important;
}

.toy-search-button {
    display: inline !important;  
    width:25% !important;
    max-width: 90px;
    font-size: 1rem;
    background-color: #D02847;
    color: #FFF3D3;
    cursor: pointer;
    border-radius: 5px;
}

.search-form input {
    background-color: #fff !important;
    border-radius: 5px !important;
    padding-left:20px !important;
}

.toy-search-button:hover, .toy-search-button:focus {
    background-color: #D02847;
    color: #FFF3D3;
    font-weight: bolder;
}

/* Sort forms */
.sort-form-toys {
    width: 50%;
    font-family: "Roboto", Arial, Helvetica, sans-serif;
}

.sort-form-toy,
.sort-form-profile {
    margin-bottom: 15px;
}

.sort-form-toys label,
.sort-form-toy label,
.sort-form-profile label {
    color: #333A3F;
}

/* ---------- 403.html, 404.html, 500.html ---------- */
/* Error title */
.title-error .fa-ban,
.title-error .fa-question,
.title-error .fa-server {
    font-size: 8rem;
    color: #D02847;
}

.title-error{
    text-align: center;
}

/* Error message */
.message-error{
    text-align: center;
}

/* Redirect button */
.redirect-button {
    font-size: 1.5rem;
    background-color: #D02847;
    color: #FFF3D3;
    cursor: pointer;
    border-radius: 5px;
}

.redirect-button:hover, .redirect-button:focus {
    font-size: 1.7rem;
    background-color: #D02847;
    color: #FFF3D3;
}

